# SimpleCPlusPlusTemplate

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
